--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  
 <body>
   <h1>Sebastian</h1>
-  <p>lets go</p>
+  <p>lets goo</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
